# simple_optimization

./: Cargo.toml  README.md  temp.txt
benches/: benches.rs
src/: bayesian_optimization.rs  grid_search.rs  lib.rs  random_search.rs  simulated_annealing.rs  util.rs
tests/: tests.rs
