[package]
name = "simple_optimization"
version = "0.1.0"
authors = ["Jonathan <jonthanwoollettlight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
itertools = "0.10.1" # izip!

# benchmarks
[dev-dependencies]
criterion = "0.3"
[[bench]]
name = "benchmarks"
harness = false