[package]
name = "simple_optimization"
version = "0.2.0"
authors = ["Jonathan <jonthanwoollettlight@gmail.com>"]
edition = "2018"
description = "Simpler optimizers for simple optimization."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/simple_optimization"
documentation = "https://docs.rs/simple_optimization/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
itertools = "0.10.1" # izip!
num_cpus = "1.13.0"

# benchmarks
[dev-dependencies]
criterion = "0.3"
[[bench]]
name = "benches"
harness = false