[package]
name = "simple_optimization"
version = "0.9.0"
authors = ["Jonathan <jonthanwoollettlight@gmail.com>"]
edition = "2018"
description = "Simpler optimizers for simple optimization."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/simple_optimization"
documentation = "https://docs.rs/simple_optimization/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
itertools = "0.10.1" # izip! AND Using `.fold_while(()` for calculating steps of fast cooling schedule in simulated annealing
num_cpus = "1.13.0" # Multi-threading
print_duration = "1.0.0" # Printing progress
num = "0.4.0" # Generics
rand_distr = "0.4.1" # Normal distribution
image = "0.23.14"
serde = { version="1.0.118", features=["derive"] }
serde_json = "1.0.50"

# benchmarks
[dev-dependencies]
criterion = "0.3"
[[bench]]
name = "benches"
harness = false